# SingleAgentSearch

./: CMakeLists.txt  README.md
Assignment5/Assignment5/: AStar.cpp  AStar.hpp
Assignment5/Assignment5.xcodeproj/: project.pbxproj
Homework3/Homework3/: DFID.cpp  DFID.h  IDA.cpp  IDA.h  IDA.hpp  IDAData.hpp  ManhattanDistance.cpp  ManhattanDistance.h  README.txt.txt  STP.cpp  STP.h  Timer.h  heuristic.cpp  heuristic.h  heuristic.hpp  main.cpp
Homework3/Homework3.xcodeproj/: project.pbxproj
Homework4/: BFS.h  DFID.cpp  DFID.h  Ranking.cpp  Ranking.h  STP.cpp  STP.h  heuristic.cpp  heuristic.h  main.cpp
Homework4/Homework4_KaisVersion/Homework4_KaisVersion/: BFS.cpp  BFS.h  STP.h  (+8 more)
Homework5/: AStar.cpp  AStar.h  BFS.h  GridMap.cpp  GridMap.h  Homework5.vcxproj  Homework5.vcxproj.filters  IDA.cpp  InefficientAStar.cpp  InefficientAStar.h  ManhattanDistance.cpp  ManhattanDistance.h  MaxHeuristic.h  NodePriorityHeap.cpp  NodePriorityHeap.h  PDB.cpp  PDB.h  STP.h  heuristic.cpp  heuristic.h  main.cpp
Homework5/Homework5/: A.cpp  A.hpp  AStar.cpp  AStar.hpp  EfficientAStar.cpp  EfficientAStar.hpp  IDA.cpp  IDA.h  STP.cpp  main.cpp
Homework5/Homework5.xcodeproj/: project.pbxproj
Homework6/: AStar.h  BFS.cpp  GridMap.cpp  GridMap.h  Heuristic.h  IDA.h  InefficientAStar.cpp  ManhattanDistance.h  MaxHeuristic.cpp  PDB.cpp  STP.h  main.cpp
Homework7/: AStar.h  AStarOpenList.h  BFS.cpp  DifferentialHeuristic.cpp  DifferentialHeuristic.h  ManhattanDistance.cpp  ManhattanDistance.h  MaxHeuristic.h  OctileDistance.h  STP.cpp  ScenarioLoader.cpp  ScenarioLoader.h  main.cpp
Homework8/: BFS.h  DifferentialHeuristic.cpp  DifferentialHeuristic.h  Grid.cpp  Grid.h  Heuristic.h  Homework8.vcxproj  Homework8.vcxproj.filters  MaxHeuristic.cpp  OctileDistance.cpp  STP.h  ScenarioLoader.h  main.cpp
(+8 files in other folders)
